@@ -4,6 +4,7 @@
 	- Fixed case-sensitivity for BBCode
 	- Homepage shows platform icons for releases
 	- Don't show deleted items on /u+ recent changes
+	- Catalog number field to release entries
 
 2.2 - 2009-01-16
 	- Additional custom CSS field to user profile
